--- a/MastersProj/About/aboutpage.html
+++ b/MastersProj/About/aboutpage.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <head>
   <link href="about.css" rel="stylesheet" type="text/css">
@@ -12,7 +13,7 @@
   </ul>
   <div class="abouttext">
     <li>This site is my Master's Project</li>
-    <li>I've been brainstorming and developing for five months</li>
+    <li>Insert description here</li>
     <li>Quyen Ha</li>
   </div>
 </body>
