--- a/MastersProj/DirectoryPage/index.html
+++ b/MastersProj/DirectoryPage/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <head>
   <title> Students Directory </title>
@@ -12,9 +13,87 @@
     <li><a href="file:///Users/Quyen/Documents/MastersProj/About/aboutpage.html">About</a></li>
   </ul>
   <div class="box">
-    <h1> STUDENTS </h1>
+    <h1> STUDENTS <div> Class of </div>
+      <select Name="Class of">
+        <option value="select year">select year</option>
+        <option value="2019">2019</option>
+        <option value="2018">2018</option>
+        <option value="2018">2017</option>
+        <option value="2018">2016</option>
+        <option value="2018">2015</option>
+        <option value="2018">2014</option>
+        <option value="2018">2013</option>
+        <option value="2018">2012</option>
+        <option value="2018">2011</option>
+      </select>
+    </h1>
   </div>
-  <div class="box">
+  <div id="test"></div>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+  <script src="database.js"></script>
+  <script>
+    $(document).ready(function(){
+      class2018.forEach(function(person){
+        // console.log(person)
+        var personDiv = $('<div class="box" />')
+        var personUl = $('<ul class="prof-list"/>')
+        var personName = $('<li/>')
+        var jobTitle = $('<li/>')
+        var employer = $('<li/>')
+        var jobLocation = $('<li/>')
+        var yearStarted = $('<li/>')
+        var interests = $('<li/>')
+
+        personName.text(person.name)
+        jobTitle.text(person.jobtitle)
+        employer.text(person.employer)
+        jobLocation.text(person.joblocation)
+        yearStarted.text(person.yearstarted)
+        interests.text(person.interests)
+
+        personUl.append(personName)
+        personUl.append(jobTitle)
+        personUl.append(employer)
+        personUl.append(jobLocation)
+        personUl.append(yearStarted)
+        personUl.append(interests)
+        personDiv.append(personUl)
+        $("#test").append(personDiv)
+      })
+    })
+
+    //making interactive using jQuery:
+    // // $(document).ready(function(){
+    //   // If my select value changes do this
+    //   // loadClassData(class2018.filter(function(item){
+    //   //   return item.jobtitle === 'GIS Technician'
+    //   // }))
+    // // })
+    //
+    //
+    //
+    // // function loadClassData(data){
+    //   data.forEach(function(person){
+    //     // console.log(person)
+    //     var personDiv = $('<div class="box" />')
+    //     var personUl = $('<ul class="prof-list"/>')
+    //     var personName = $('<li/>')
+    //     personName.text(person.name)
+    //     personName.css("font-weight", "Bold")
+    //     personUl.append(personName)
+    //     personUl.append($('<li/>').text(person.jobtitle).css('color', 'pink'))
+    //     personDiv.append(personUl)
+    //     $("#test").append(personDiv)
+    //   })
+    // }
+
+
+
+
+
+  </script>
+
+<!-- <div class="box">
     <ul class= "prof-list">
       <li><a href=""> NAME </a></li>
       <li> Name of position </li>
@@ -61,7 +140,7 @@
         <li>Tucson, AZ</li>
         <li>Interests: development, systems analysis, biology</li>
       </ul>
-    </div>
+    </div> -->
 
   </body>
 
