--- a/MastersProj/ProfileForm/profform.html
+++ b/MastersProj/ProfileForm/profform.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -16,23 +17,28 @@
 
 <div class="title">
 
-  <h1>EDIT PROFILE</h1>
+<h1>EDIT PROFILE</h1>
 
 </div>
 
 <div class="container">
 
-  <td> Name </td>
+  <div> Name </div>
     <div class="short">
       <input type="text" placeholder="First and last" class="shortt">
     </div>
 
-  <td> Job Title </td>
+  <div> Job Title </div>
     <div class="short">
       <input type="text" placeholder="What's your job title?" class="shortt">
     </div>
 
-  <td> Job Location </td>
+  <div> Employer </div>
+    <div class="short">
+      <input type="text" placeholder="Who's your employer?" class="shortt">
+    </div>
+
+  <div> Job Location </div>
     <div class="short">
       <input type="text" placeholder="City & State" class="shortt">
     </div>
@@ -40,9 +46,10 @@
 </div>
 
 <div class="container">
-  <td>Class of</td>
-  <td><select Name="Class of">
+  Class of
+  <select Name="Class of">
     <option value="select year">select year</option>
+    <option value="2019">2019</option>
     <option value="2018">2018</option>
     <option value="2018">2017</option>
     <option value="2018">2016</option>
@@ -52,7 +59,7 @@
     <option value="2018">2012</option>
     <option value="2018">2011</option>
   </select>
-  </td>
+</div>
 
   </div>
 </div>
@@ -77,6 +84,8 @@
       <input type="checkbox" name="Interests"/>Earth sciences<br/>
       <input type="checkbox" name="Interests"/>Archeology<br/>
       <input type="checkbox" name="Interests"/>App development<br/>
+      <input type="checkbox" name="Interests"/>Web development<br/>
+      <input type="checkbox" name="Interests"/>Webmaps<br/>
       <input type="checkbox" name="Interests"/>Scripting<br/>
       <input type="checkbox" name="Interests"/>Virtual reality<br/>
       <input type="checkbox" name="Interests"/>Augmented reality
